src/Javafe/tags/javafe-2-0b4/Javafe/test/javafe/test/fe/test14/Single.java
// Test illegal import statements

import p.NoSuchClass;			// error

public class Single {}
